plugins {
    id 'java'
}

group = 'com.example.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])
}

test {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs = ['--enable-preview', '-parameters']
}

java {
    sourceCompatibility JavaVersion.VERSION_23
    targetCompatibility JavaVersion.VERSION_23
}